# flatpak-mysql

./: CMakeLists.txt  flatpak_mysql.pc.in  mysqlclient.pc
